# FluidSimulation

./: .gitignore  CMakeLists.txt  README.md
include/: compute_shader.h  particle.h  simulation.h  spatial_hash.h
res/shaders/: calculate_density.comp  calculate_forces.comp  calculate_hash.comp  calculate_offset.comp  count_frequencies.comp  integrate.comp  particle.fs  particle.vs  scan_counts.comp  scatter.comp
src/: compute_shader.cpp  main.cpp  simulation.cpp  spatial_hash.cpp
